--- a/problems/case7/public/index.html
+++ b/problems/case7/public/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <title>webpack</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
-  <script src="./dist/bundle.js"></script>
+  <script src="./bundle.js"></script>
 </head>
 <body>
   <div>
