--- a/problems/case7/public/index.html
+++ b/problems/case7/public/index.html
@@ -4,12 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>webpack</title>
-  <script src="./bundle.js"></script>
+  <script src="../dist/bundle.js"></script>
 </head>
 <body>
-  <div>
-    <canvas id="cs"></canvas>
-  </div>
+  <div class="big-pic">big</div>
 
   <script type="text/javascript">
     
