--- a/problems/case10/index.html
+++ b/problems/case10/index.html
@@ -18,15 +18,12 @@
 
   <div style="display: flex;">
     <div>flex1</div>
-    <div>flex2</div>
-    <div>flex3</div>
-    <div>flex4</div>
   </div>
 
-  <div>
-    <span>1</span>
+  <div class="box">
+    <span style="font-size: 1px">1</span>
+    <span style="font-size: 1pt">1</span>
   </div>
-  <div>2</div>
 
   <script type="text/javascript">
     let timer = null
