--- a/problems/case14/index.html
+++ b/problems/case14/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
 </head>
 <body>
   <!--vue-ssr-outlet-->
+  <div id="app"></div>
 </body>
 </html>
