--- a/problems/case4/event.html
+++ b/problems/case4/event.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>vue</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
-  <script src="../../node_modules/vue/dist/vue.js"></script>
+  <script src="./node_modules/vue/dist/vue.js"></script>
 </head>
 <body>
   <div id="app">
