--- a/problems/case11/index.html
+++ b/problems/case11/index.html
@@ -9,5 +9,7 @@
 <body>
   <script type="text/javascript" src="./s1.js"></script>
   <script type="text/javascript" src="./s2.js"></script>
+  <script type="text/javascript" src="./s3.js"></script>
+  <script type="text/javascript" src="./s4.js"></script>
 </body>
 </html>
