--- a/problems/case10/index.html
+++ b/problems/case10/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>css</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./letter1.css"> -->
+  <link rel="stylesheet" type="text/css" href="./letter2.css">
 </head>
 <body>
-  <div class="container">
-    <li class="li-item" style="left: 0vw">page1</li>
-    <li class="li-item" style="left: 10vw">page2</li>
-    <li class="li-item" style="left: 20vw">page3</li>
+  <!-- <div class="container">
+    <span class="letter" data-char="A"></span>
+    <span class="letter" data-char="B"></span>
+    <span class="letter" data-char="C"></span>
+  </div> -->
+  <div>
+    <span class="letter-a"></span>
+    <!-- <span class="letter-b"></span> -->
   </div>
   <script type="text/javascript">
 
