--- a/problems/case10/index.html
+++ b/problems/case10/index.html
@@ -5,6 +5,8 @@
   <title>css</title>
   <!-- <link rel="stylesheet" type="text/css" href="./letter1.css"> -->
   <link rel="stylesheet" type="text/css" href="./letter2.css">
+  <link rel="stylesheet" type="text/css" href="./collpse.css">
+  <link rel="stylesheet" type="text/css" href="./wave.css">
 </head>
 <body>
   <!-- <div class="container">
@@ -13,9 +15,17 @@
     <span class="letter" data-char="C"></span>
   </div> -->
   <div>
-    <span class="letter-a"></span>
+    <!-- <span class="letter-a"></span> -->
     <!-- <span class="letter-b"></span> -->
   </div>
+
+  <div>
+    <div class="block1"></div>
+    <div class="block2"></div>
+  </div>
+
+  <div class="wave"></div>
+
   <script type="text/javascript">
 
   </script>
