--- a/problems/case11/index.html
+++ b/problems/case11/index.html
@@ -11,5 +11,6 @@
   <script type="text/javascript" src="./s2.js"></script>
   <script type="text/javascript" src="./s3.js"></script>
   <script type="text/javascript" src="./s4.js"></script>
+  <script type="text/javascript" src="./s5.js"></script>
 </body>
 </html>
