Add loader, compositionstart

--- a/problems/case1.8/index.html
+++ b/problems/case1.8/index.html
@@ -10,6 +10,7 @@
 	<div class="box">
 		<div class="content"></div>
 	</div>
+  <input type="text" id="enter" />
   <script type="text/javascript" src="./s1.js"></script>
 </body>
 </html>
