--- a/problems/case0.7/index.html
+++ b/problems/case0.7/index.html
@@ -6,6 +6,7 @@
   <title>webpack</title>
 </head>
 <body>
-  <div class="big-pic">big</div>
+  <!-- <div class="big-pic">big</div> -->
+  <div class="self-word">我就是测试一下</div>
 </body>
 </html>
