--- a/problems/case1.0/index.html
+++ b/problems/case1.0/index.html
@@ -35,6 +35,10 @@
     <li>5</li>
   </ul>
 
+  <div style="width: 200px; height: 100px">
+    <div style="width: 80px; height: 40px; padding-top: 20%"></div>
+  </div>
+
   <script type="text/javascript">
 
   </script>
