--- a/problems/case3.0/group/index.html
+++ b/problems/case3.0/group/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8" />
-  <title>qunee.</title>
+  <title>qunee group.</title>
   <script src="../qunee-min.js"></script>
 </head>
 <body>
