--- a/problems/case3.0/advance/index.html
+++ b/problems/case3.0/advance/index.html
@@ -4,16 +4,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8" />
   <title>qunee.</title>
-  <script src="http://static.iqiyi.com/js/h5activity/qunee/qunee-min.js"></script>
-
-  <style>
-  	html, body {
-  		background-color: #333840;
-  	}
-  </style>
+  <script src="../qunee-min.js"></script>
 </head>
 <body>
-	<div id="demon" style="height: 700px"></div>
+	<div id="demon" style="height: 500px"></div>
 	<script src="./test.js"></script>
 </body>
 </html>
