--- a/problems/case3.1/d3/index.html
+++ b/problems/case3.1/d3/index.html
@@ -8,6 +8,12 @@
   <script src="../dagre-d3.js"></script>
 
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
   	.axis path {
 	    fill: none;
 	    stroke: red;
@@ -24,11 +30,48 @@
 	    font-family: sans-serif;
 	    font-size: 11px;
 		}
+
+    .link {
+      stroke-linecap: round;
+      stroke-width: 1.3px !important;
+      fill: none;
+      animation: topo-dash 1s linear infinite !important;
+    }
+
+    @keyframes topo-dash {
+      from {
+        stroke-dashoffset: 20;
+      }
+      to {
+        stroke-dashoffset: 0;
+      }
+    }
+
+    .nav {
+      position: fixed;
+      width: 100%;
+    }
+
+    .hide {
+      display: none;
+    }
+
+    .tabs g {
+      cursor: pointer;
+    }
+
+    .d3node {
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <p></p>
-  <p></p>
-	<script src="./test.js"></script>
+  <div class="nav">
+    <svg id="tabs" class="tabs">
+    </svg>
+  </div>
+  <div id="demon"></div>
+	<script src="./fetch.js"></script>
+  <script src="./test.js"></script>
 </body>
 </html>
