--- a/problems/case2.1/index.html
+++ b/problems/case2.1/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>settimeOut requestAnimationFrame</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <ul id="container"></ul>
+  <!-- <ul id="container"></ul> -->
 
-  <script type="text/javascript" src="./s1.js"></script>
+  <!-- <script type="text/javascript" src="./s1.js"></script> -->
+
+  <input type="text" value="123" id="cc">
+  <input type="text" value="" id="pp">
+  <p>
+    <input type="button" value="copy" onclick="doCopy()">
+    <input type="button" value="paste" onclick="doPaste()">
+  </p>
+  <script type="text/javascript" src="./s2.js"></script>
 </body>
 </html>
