--- a/problems/case1.0/index.html
+++ b/problems/case1.0/index.html
@@ -5,7 +5,7 @@
   <title>css</title>
   <!-- <link rel="stylesheet" type="text/css" href="./letter1.css"> -->
   <link rel="stylesheet" type="text/css" href="./letter2.css">
-  <link rel="stylesheet" type="text/css" href="./collpse.css">
+  <link rel="alternate stylesheet" type="text/css" href="./collpse.css">
   <link rel="stylesheet" type="text/css" href="./wave.css">
   <link rel="stylesheet" type="text/css" href="./test.css">
 </head>
