Add blob, xmlhttprequest

--- a/problems/case0.1/index.html
+++ b/problems/case0.1/index.html
@@ -47,7 +47,7 @@
       console.log('jl')
     })
 
-    document.getElementById('btn2').addEventListener('click', () => {
+    document.getElementById('btn2').addEventListener('click', (e) => {
       dojl()
     })
 
