--- a/problems/case3.3/index.html
+++ b/problems/case3.3/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>case3.3</title>
 
-    <script type="text/javascript" src="./node_modules/babel-standalone/babel.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
