--- a/problems/case1.7/index.html
+++ b/problems/case1.7/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no,viewport-fit=cover">
   <title>express</title>
 </head>
 <body>
   <div>
-    <img src="./images/smt.gif">
+    <img src="http://localhost:8004/images/smt.gif">
   </div>
 </body>
 </html>
