--- a/problems/case1.8/index.html
+++ b/problems/case1.8/index.html
@@ -11,6 +11,8 @@
 		<div class="content"></div>
 	</div>
   <input type="text" id="enter" />
-  <script type="text/javascript" src="./s1.js"></script>
+  <!-- <script type="text/javascript" src="./s1.js"></script> -->
+  <script type="text/javascript" src="./s2.js"></script>
+
 </body>
 </html>
