--- a/problems/case0.1/index.html
+++ b/problems/case0.1/index.html
@@ -6,71 +6,17 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <div>
-    <input id="btn1" type="button" value="防抖">
-    <input id="btn2" type="button" value="节流">
+  <div id="container">
+    <input id="btn1" type="radio" name="a" value="防抖">1
+    <input id="btn2" type="radio" name="a" value="节流">2
   </div>
 
   <script type="text/javascript">
-    let fangdou = (action) => {
-      let timer = null
+    
 
-      return function () {
-        clearTimeout(timer)
-        timer = setTimeout(() => {
-          action.call(this)
-        }, 1000)
-      }
-    }
-
-    let dofd = fangdou(() => {
-      console.log('fd')
+    document.getElementById('container').addEventListener('click', (e) => {
+      console.log(e)
     })
-
-    document.getElementById('btn1').addEventListener('click', () => {
-      dofd()
-    })
-
-    function jieliu(action) {
-      let duration = 1000
-      let timer = null
-      let begin = 0
-      return function () {
-        if (+new Date() - begin > duration) {
-          action.call(this)
-          begin = +new Date()
-        }
-      }
-    }
-
-    let dojl = jieliu(() => {
-      console.log('jl')
-    })
-
-    document.getElementById('btn2').addEventListener('click', (e) => {
-      dojl()
-    })
-
-    let curry = (action) => {
-      let list = []
-      return function () {
-        if (arguments.length > 0) {
-          [].push.apply(list, arguments)
-        } else {
-          action.call(this, list)
-        }
-      }
-    }
-
-    let cost = curry((list) => {
-      console.log(list)
-    })
-
-    cost(1)
-    cost(10)
-    cost(100)
-
-    cost()
   </script>
 </body>
 </html>
