feat: 增加基础示例

--- a/problems/case0.7/index.html
+++ b/problems/case0.7/index.html
@@ -6,7 +6,7 @@
   <title>webpack</title>
 </head>
 <body>
-  <script src="../lib/customNumber/dist/customNumber.js"></script>
+  <script src="/customNumber/dist/customNumber.js"></script>
   <div class="self-word">我就是测试一下</div>
 </body>
 </html>
