--- a/problems/case2.1/index.html
+++ b/problems/case2.1/index.html
@@ -16,6 +16,9 @@
     <input type="button" value="copy" onclick="doCopy()">
     <input type="button" value="paste" onclick="doPaste()">
   </p>
+
+  <iframe src="http://www.test2.com/inner.html"></iframe>
+
   <script type="text/javascript" src="./s2.js"></script>
 </body>
 </html>
