--- a/problems/case3.2/fetch/index.html
+++ b/problems/case3.2/fetch/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>promise</title>
+  <link rel="shortcut icon" href="#">
+  <link rel="dns-prefetch" href="//m.test.com/">
 </head>
 <body>
-  <!-- <script src="./test.js"></script> -->
-  <!-- <script src="./t1.js"></script> -->
-  <script src="./t33.js"></script>
+  <script src="http://m.test.com/test.js"></script>
 </body>
 </html>
