--- a/problems/case3.2/normal/index.html
+++ b/problems/case3.2/normal/index.html
@@ -5,7 +5,14 @@
   <title>normal js.</title>
 </head>
 <body>
+  <!-- <script async src="./async1.js"></script>
+  <script async src="./async2.js"></script>
+  <script defer src="./defer1.js"></script>
+  <script defer src="./defer2.js"></script> -->
+  <!-- <script src="./demo.js"></script> -->
+  <script type="text/javascript" src="http://m.iqiyi.com/main.js"></script>
   <a id="atag" href="http://www.baidu.com">click me.</a>
-  <script src="./demo.js"></script>
+
+  <div>coming.</div>
 </body>
 </html>
