--- a/problems/case1.0/test.html
+++ b/problems/case1.0/test.html
@@ -3,48 +3,44 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>css</title>
-  <style type="text/css">
-    .block {
-      position: relative;
-      display: inline-block;
-      width: 60px;
-      height: 60px;
-      /*overflow: hidden;*/
-    }
-
-    .icon {
-      display: inline-block;
-      width: 60px;
-      height: 60px;
-      background: url('./img/test.png') no-repeat center;
-      /*background-size: 100% 100%;*/
-      /*border: 1px dashed blue;*/
-    }
-
-    .gray {
-      background-color: red;
-    }
-
-    .drop {
-      position: relative;
-      left: -60px;
-      filter: drop-shadow( 60px 0 0 red);
-      border-right: 60px solid transparent;
-    }
-  </style>
 </head>
 <body>
-  <div>
-    <div class="block">
-      <i class="icon gray"></i>
-    </div>
-    <p>------</p>
-    <div class="block">
-      <i class="icon drop"></i>
-    </div>
-  </div>
+  <div id="container"></div>
 
   <script type="text/javascript">
+    const total = 1000
+    const once = 20
+    let count = 0
+    const times = Math.round(total/once)
+    const container = document.getElementById('container')
+
+    function add() {
+      console.time('add')
+      const fragment = document.createDocumentFragment()
+      for (let i=0; i<once; i++) {
+        const li = document.createElement('li')
+        li.innerHTML = 'li ' + (i + 1)
+        fragment.appendChild(li)
+      }
+      container.appendChild(fragment)
+      console.timeEnd('add')
+
+      if (++count < times) {
+        requestAnimationFrame(add)
+      }
+    }
+
+    function add1() {
+      console.time('add1')
+      for (let i=0; i<once; i++) {
+        const li = document.createElement('li')
+        li.innerHTML = 'li ' + (i + 1)
+        container.appendChild(li)
+      }
+      console.timeEnd('add1')
+    }
+
+    requestAnimationFrame(add)
 
   </script>
 </body>
