feat: 增加模板编译功能

--- a/problems/case3.2/intersectionObserver/index.html
+++ b/problems/case3.2/intersectionObserver/index.html
@@ -42,5 +42,17 @@
   <h3>1111</h3>
   <h3>1111</h3>
   <script src="./test.js"></script>
+  <script>
+    class CC {
+      constructor(name) {
+        console.log(name)
+      }
+    }
+    console.log(new CC('fff'))
+
+  </script>
+  <script nomodule>
+    alert(33)
+  </script>
 </body>
 </html>
