--- a/problems/case3.2/normal/index.html
+++ b/problems/case3.2/normal/index.html
@@ -7,5 +7,9 @@
 <body>
   <a id="atag" href="http://www.baidu.com">click me.</a>
   <script src="./demo.js"></script>
+  <script src="./demo1.js"></script>
+  <script src="./demo2.js"></script>
+  <script src="./demo3.js"></script>
+  <script src="./demo4.js"></script>
 </body>
 </html>
